--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #000000;
 }
 
 code {
@@ -37,6 +39,7 @@ html {
   padding: 0px;
   overflow: hidden;
   padding-bottom: 10vh;
+  position: relative;
 }
 
 .scroll-container:last-of-type {
@@ -52,81 +55,75 @@ html {
 
 .content-container {
   position: relative;
-  /* max-height: 90vh; */
   width: 100%;
+  max-height: 80vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
-  overflow: hidden;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.content-container img {
+  max-height: 70vh;
+}
+
+.bg-absolute {
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  /* box-shadow: inset 0px 20px 10px -10px rgba(0, 0, 0, 0.8); */
+  box-shadow: inset 0px 0px 1rem 1rem rgba(0, 0, 0, 0.8);
+  /* border-radius: 0%; */
 }
 
 .banner-row {
   position: relative;
+  margin-inline: auto;
   margin-top: -20px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.banner-container {
-  width: 90%;
-  max-width: 350px;
-  position: relative;
 }
 
 .banner-box {
-  /* padding-top: 20%;
-  padding-bottom: 20%; */
-  width: 100%;
-  max-width: 350px;
+  width: 80vw;
+  max-width: 300px;
+  max-height: 20vh;
+  margin-inline: auto;
   position: relative;
 }
 
 .banner-bg {
-  /* padding-top: 20%;
-  padding-bottom: 20%; */
   background-color: var(--banner-bg-color);
-  width: 80%;
-  height: 100%;
+  width: 80vw;
   max-width: 350px;
   filter: drop-shadow(10px 10px 10px #000000);
   position: absolute;
-  top: 0px;
-  left: 10%;
+  left: 50%;
 }
 
 .banner-content {
   position: absolute;
-  width: 100%;
+  max-height: 20vh;
   filter: drop-shadow(4px 4px 2px #000000);
 }
 
 #madison {
   top: -15%;
-  left: 0%;
-  width: 95%;
+  left: -5%;
+  /* width: 95%; */
 }
 
 #letter-m {
   top: -15%;
-  left: 0%;
-  width: 95%;
+  left: -5%;
 }
 
-#letter-m {
-  top: -200%;
-  left: 0%;
-  width: 250%;
-}
-
-#olguin {
-  top: 38%;
-  left: 35%;
-  width: 95%;
-}
-
-#letter-m-transparent {
+.letter-m-transparent {
   position: relative;
+  max-height: 20vh;
+  max-width: 280px;
 }
 
 .svg-icon-link {
@@ -155,11 +152,13 @@ html {
 .icon-button {
   font-size: 2rem;
   line-height: 1rem;
+  opacity: 90%;
 }
 
 .icon-button:hover {
-  /* opacity: 90%; */
   cursor: pointer;
+  opacity: 100%;
+  /* color: red; */
 }
 
 .icon-button svg {
