--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,6 @@ body {
   background-color: #000000;
 }
 
-.handwritten-text {
-  font-family: "Caveat", cursive;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -28,6 +24,7 @@ html {
 
   scroll-snap-type: y mandatory;
 
+  /* to assist with determining the viewable height on mobile */
   min-height: calc(100% + env(safe-area-inset-top));
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
@@ -40,15 +37,22 @@ html {
 
 .scroll-container {
   height: 100vh;
+  /* if browser supports */
   height: calc(100vh - env(safe-area-inset-bottom));
   display: flex;
   justify-content: center;
   align-items: center;
-  scroll-snap-align: start;
   padding: 0px;
   overflow: hidden;
-  padding-bottom: 10vh;
+  padding-bottom: 12vh;
   position: relative;
+
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+}
+
+.height-test-env {
+  height: calc(100vh - env(safe-area-inset-bottom));
 }
 
 .scroll-container:last-of-type {
@@ -173,14 +177,46 @@ html {
   pointer-events: none;
 }
 
+/* --------------- */
+/* --------------- */
+
+/* QRCODE MODAL */
+/* full screen modal translates from top which does not center the qrcode image. This will scale from 0 to 1 instead. Since the element is full screen, the scale will originate from the center of the screen.*/
+.qrcode-modal.modal.fade .modal-dialog {
+  transition: transform 0.3s ease-out;
+  transform: scale(0);
+}
+
+.qrcode-modal.modal.show .modal-dialog {
+  transform: none;
+}
+
+.qrcode-modal.modal.fade {
+  transition: opacity 0.15s linear;
+}
+
+.qrcode-modal.modal.fade:not(.show) {
+  opacity: 0;
+}
+/* END - QRCODE MODAL */
+
+/* --------------- */
+/* --------------- */
+
+/* UTILITY */
+
+/* change pointer on clickable icons or images without button or anchor */
 .click-pointer:hover {
   cursor: pointer;
 }
 
+/* bootstrap did not have a max height. */
+/* use to keep modal image contained on page if full screen and landscape*/
 .max-vh-100 {
   max-height: 100vh;
 }
 
-.modal-contentbox {
-  background-color: rgba(0, 0, 0, 0.8);
+.handwritten-text {
+  font-family: "Caveat", cursive;
 }
+/* END - UTILITY */
