--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  --banner-bg-color: #193a71;
+
+  scroll-snap-type: y mandatory;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,35 +20,40 @@ code {
     monospace;
 }
 
-.drop-shadow {
-  -webkit-filter: drop-shadow(10px 10px 10px #000000);
-  filter: drop-shadow(10px 10px 10px #000000);
-}
-
-html {
-  --banner-bg-color: #193a71;
-
-  scroll-snap-type: y mandatory;
-
-  /* to assist with determining the viewable height on mobile */
-  min-height: calc(100% + env(safe-area-inset-top));
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
-}
-
 /* img {
   overflow-clip-margin: content-box;
   overflow: clip;
 } */
+/* 
+@supports (padding-top: constant(safe-area-inset-top)) {
+  body {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right)
+      env(safe-area-inset-bottom) env(safe-area-inset-left);
+  }
+}
+
+@media (display-mode: fullscreen) {
+  body {
+    padding: 0;
+  }
+}
+
+@media (display-mode: standalone) {
+  body {
+    padding: 0;
+  }
+} */
 
 .scroll-container {
   height: 100vh;
-  /* if browser supports */
-  height: calc(100vh - env(safe-area-inset-bottom));
-  display: flex;
+
+  padding: 30% 0%;
+  /* padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left); */
+
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 0px;
+  align-items: center; */
   overflow: hidden;
   /* padding-bottom: 12%; */
   position: relative;
@@ -56,31 +67,35 @@ html {
   height: calc(100vh - env(safe-area-inset-bottom));
 }
 
-.scroll-container:last-of-type {
-  /* scroll-snap-align: end; */
-  padding-bottom: 0;
-  /* padding-top: 10vh;
-  padding-bottom: 0vh; */
-}
-
 .page-container {
   display: block;
-  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  box-shadow: inset 0px 0px 2px 2px green;
 }
 
 .content-container {
   position: relative;
-  width: 100%;
-  max-height: 80vh;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
+  max-height: 100%;
+  /* width: 100%; */
+  /* max-height: 80vh; */
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* flex-direction: column; */
   padding-left: 5%;
   padding-right: 5%;
+  box-shadow: inset 0px 0px 2px 2px red;
+}
+
+.throwball-box {
+  max-height: 100%;
 }
 
 .content-container img {
-  max-height: 70vh;
+  max-height: 100%;
+  box-shadow: inset 0px 0px 2px 2px purple;
 }
 
 .bg-absolute {
@@ -98,7 +113,8 @@ html {
 .banner-row {
   position: relative;
   margin-inline: auto;
-  margin-top: -20px;
+  margin-top: -100px;
+  box-shadow: inset 0px 0px 2px 2px orange;
 }
 
 .banner-box {
@@ -219,5 +235,10 @@ html {
 
 .handwritten-text {
   font-family: "Caveat", cursive;
+}
+
+.drop-shadow {
+  -webkit-filter: drop-shadow(10px 10px 10px #000000);
+  filter: drop-shadow(10px 10px 10px #000000);
 }
 /* END - UTILITY */
