--- a/src/index.css
+++ b/src/index.css
@@ -20,36 +20,63 @@ code {
     monospace;
 }
 
-/* img {
-  overflow-clip-margin: content-box;
-  overflow: clip;
-} */
-/* 
-@supports (padding-top: constant(safe-area-inset-top)) {
-  body {
-    padding: env(safe-area-inset-top) env(safe-area-inset-right)
-      env(safe-area-inset-bottom) env(safe-area-inset-left);
-  }
+#full-container {
+  box-shadow: inset 0px 0px 0px 10px hotpink;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  flex-grow: 0;
 }
 
-@media (display-mode: fullscreen) {
-  body {
-    padding: 0;
-  }
+#image-container {
+  box-shadow: inset 0px 0px 0px 7px cyan;
+  /* margin-inline: auto; */
+  position: relative;
+  display: inline-flex;
+
+  max-width: 100%;
+  max-height: 100%;
 }
 
-@media (display-mode: standalone) {
-  body {
-    padding: 0;
+#throw-no-ball {
+  max-width: 100%;
+  max-height: 100%;
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  box-shadow: inset 0px 0px 0px 4px greenyellow;
+}
+
+#ball {
+  animation: indefinite-spin 5s infinite linear;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: inset 0px 0px 0px 2px blueviolet;
+  transform: rotate(360deg);
+  transform-origin: 26.3% 22.2%;
+}
+
+@keyframes indefinite-spin {
+  0% {
+    rotate: 0deg;
   }
-} */
+  100% {
+    rotate: 360deg;
+  }
+}
 
 .scroll-container {
   height: 100vh;
 
-  padding: 30% 0%;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding: 15% 0% 15% 0%;
+  /* padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left); */
 
   /* display: flex;
   justify-content: center;
@@ -82,27 +109,93 @@ code {
 }
 
 .content-container {
-  position: relative;
-  max-height: 100%;
   /* width: 100%; */
   /* max-height: 80vh; */
   /* overflow: hidden; */
   /* display: flex; */
   /* flex-direction: column; */
+
+  /*   
+  position: relative;
+  max-height: 100%;
   padding-left: 5%;
   padding-right: 5%;
-  box-shadow: inset 0px 0px 2px 2px red;
+  box-shadow: inset 0px 0px 2px 2px red; */
+
+  width: 100%;
+  /* Set the width of the container */
+  height: 100%;
+  /* Set initial height to 0 for aspect ratio calculation */
+  /* padding-bottom: 60%;  */
+  /* Set the desired aspect ratio (e.g., 60% for a 3:2 aspect ratio) */
+  position: relative;
+  /* Create a positioning context for the image */
+  /* overflow: hidden;  */
+  /* Hide any overflow beyond the container */
+  box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 0.5);
 }
 
 .throwball-box {
-  max-height: 100%;
-  padding-bottom: 15%;
+  width: 100%;
+  /* Set the width of the container */
+  height: 100%;
+  /* Set initial height to 0 for aspect ratio calculation */
+  /* padding-bottom: 60%; */
+  /* Set the desired aspect ratio (e.g., 60% for a 3:2 aspect ratio) */
+  position: relative;
+  /* Create a positioning context for the image */
+  overflow: hidden;
+  box-shadow: inset 0px 0px 0px 2px rgb(255, 255, 255, 0.5);
 }
 
-.content-container img {
-  max-height: 100%;
-  box-shadow: inset 0px 0px 2px 2px purple;
+.throwball-box .animation-image {
+  /* max-height: 100%; */
+  /* box-shadow: inset 0px 0px 2px 2px purple; */
+  box-shadow: inset 0px 0px 0px 2px rgb(0, 255, 0, 0.5);
+
+  position: absolute; /* Position the image relative to the container */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  /* Let the browser calculate the width while maintaining aspect ratio */
+  height: auto;
+  /* Let the browser calculate the height while maintaining aspect ratio */
+  max-width: 100%;
+  /* Limit the width to the container's width */
+  max-height: 100%; /* Limit the height to the container's height */
 }
+
+.throwball-box .hidden-img {
+  /* max-height: 100%; */
+  /* box-shadow: inset 0px 0px 2px 2px purple; */
+  box-shadow: inset 0px 0px 0px 2px rgb(0, 255, 0, 0.5);
+
+  position: absolute; /* Position the image relative to the container */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  /* Let the browser calculate the width while maintaining aspect ratio */
+  height: auto;
+  /* Let the browser calculate the height while maintaining aspect ratio */
+  max-width: 100%;
+  /* Limit the width to the container's width */
+  max-height: 100%; /* Limit the height to the container's height */
+}
+
+/* .throwball-box #bball {
+  top: 50%;
+  left: 50%;
+  width: 25%;
+  transform: translate(-72%, -87.5%);
+} */
+
+/* .img-dim {
+  margin-inline: auto;
+  box-shadow: inset 0px 0px 0px 4px rgb(255, 0, 0, 1);
+  padding: 10%;
+} */
 
 .bg-absolute {
   position: absolute;
