--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ code {
     monospace;
 }
 
+h1 {
+  margin-bottom: 3rem;
+}
+
 .scroll-container {
   height: 100vh;
 
@@ -31,7 +35,7 @@ code {
   position: relative;
 
   scroll-snap-align: start;
-  scroll-snap-stop: always;
+  /* scroll-snap-stop: always; */
 }
 
 .height-test-env {
@@ -56,9 +60,6 @@ code {
   width: 100%;
   height: 100%;
   position: relative;
-  /* Create a positioning context for the image */
-  /* overflow: hidden;  */
-  /* Hide any overflow beyond the container */
   /* box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 0.5); */
 }
 
@@ -165,6 +166,98 @@ code {
   filter: drop-shadow(0.25em 0.25em 0.25em #000000);
   /* box-shadow: inset 0px 0px 0px 4px silver; */
 }
+
+/* ----------------- */
+.install-popover {
+  height: auto;
+  width: min(18rem, 80vw);
+  max-width: 80vw;
+  transform: translateY(-3.5rem);
+  padding-top: 3rem;
+  padding-bottom: 0.5rem;
+}
+
+/* This can be reused for other elements. */
+/* Arrow was intended for Apple Mobile Safari only. However, iPone in landscape and possibly iPad in portrait and landscape have the context menu button at the top. Opting not to use the arrow until future updates that determine device and orientation. */
+/* .add-bottom-arrow::after {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 2em;
+  height: 2em;
+  content: ""; */
+/* using 52% for y axis. When elements are flush against each other, a 1px gap can appear depending on how much the browser is zoomed in and out due to rounding of %. */
+/* transform: translate(-50%, -52%) rotate(45deg);
+  border-top: 1em solid transparent;
+  border-left: 1em solid transparent;
+  border-bottom: 1em solid white;
+  border-right: 1em solid white;
+} */
+
+.install-popover .install-logo {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 0.375rem;
+  width: 4rem;
+  max-width: 75%;
+  aspect-ratio: 1;
+  /* Gives a pop-up dimension look to the image */
+  box-shadow: inset 0.1em 0.1em 0.75em -0.5em white,
+    inset -0.25em -0.25em 0.625em -0.375em black,
+    0.25em 0.25em 0.5em -0.25em black;
+  /* background-image: url("./assets/images/logo/logo-128x128.png"); */
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.install-popover .install-header {
+  /* height: 3rem; */
+  /* border-top-left-radius: 0.5rem; */
+  /* border-top-right-radius: 0.5rem; */
+  border-bottom: 1px solid black;
+}
+
+.install-popover .fst-italic {
+  font-size: 0.75rem;
+}
+
+.add-home-box {
+  /* font-size: 0.5rem; */
+  /* font-size: 1.869vw; */
+  font-size: min(0.5rem, 1.869vw);
+  /* line-height: 0.75rem; */
+  /* line-height: 3.044vw; */
+  line-height: 100%;
+  margin-right: 1rem;
+  background-color: rgba(191, 191, 191, 0.1);
+}
+
+.add-home-box .add-home-icon {
+  /* min-width: 12vw; */
+  padding: min(0.25rem, 1.244vw);
+}
+
+.add-home-box .add-home-text div {
+  /* padding: 0.25rem; */
+  /* padding: 1.244vw; */
+  padding: min(0.25rem, 1.244vw);
+}
+
+.add-home-box img {
+  /* width: 3rem; */
+  /* width: 8.22vw; */
+  width: min(3rem, 8.22vw);
+  height: auto;
+  /* border-radius: 0.375rem; */
+  /* border-radius: 1.7vw; */
+  border-radius: min(0.375rem, 1.7vw);
+  /* margin: min(0.25rem, 5vw); */
+}
+
+/* ----------------- */
+
 /* 
 #svg-letters-adison {
   width: 100%;
@@ -175,6 +268,7 @@ code {
   box-shadow: inset 0px 0px 0px 2px yellow;
 } */
 
+/* ----------------- */
 @keyframes indefinite-spin {
   0% {
     rotate: 0deg;
@@ -391,30 +485,59 @@ code {
 }
 /* END - UTILITY */
 
-.test-page .btn,
-.test-page input {
-  font-size: 0.75rem;
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-  min-height: auto;
-}
+/* --------------- */
+/* --------------- */
 
-.test-page .input-group-text,
-.test-page .form-control-color,
-.test-page .form-control-sm {
-  font-size: 0.75rem;
-}
+/* MEDIA QUERY */
+/* @media (orientation: portrait) {
+} */
 
-.test-page .form-control-color {
-  font-size: 0.75rem;
-  max-width: 2.35rem;
-}
+@media (orientation: landscape) {
+  h1 {
+    margin-bottom: 0.5rem;
+  }
 
-.test-page .form-check input {
-  margin-top: 0.375rem;
-}
+  .qrcode-box img {
+    padding: 1rem;
+    border: none;
+    background-color: transparent;
+    border-radius: 2rem;
+  }
 
-.test-page .form-switch input {
-  font-size: 0.875rem;
-  margin-top: 0.375rem;
+  .install-popover {
+    height: auto;
+    width: 80vw;
+    transform: translateY(-0.5rem);
+    padding-top: 0.5rem;
+    padding-bottom: 0rem;
+  }
+
+  .install-logo {
+  }
+
+  .install-popover ol {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 0rem;
+  }
+
+  .install-popover ol > li {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0px;
+    margin-inline: 1rem;
+    border-right: 1px solid rgba(0, 0, 0, 0.25);
+  }
+
+  .install-popover ol > li:last-child {
+    flex-grow: 2;
+    border-right: none;
+    padding-right: 0rem;
+  }
+
+  .install-popover .install-logo {
+    top: -1rem;
+    left: -1rem;
+    transform: translate(0%, 0%);
+  }
 }
