image media queries

--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,7 @@ h1 {
 }
 
 .qrcode-box img {
+  max-width: 75%;
   border-radius: 1rem;
 }
 
@@ -356,7 +357,7 @@ h1 {
       rgba(0, 0, 0, 0.8),
       rgba(0, 0, 0, 1) 90%
     ),
-    url("./assets/images/backgrounds/sitting-w-ball-bg-vert-25.jpg");
+    url("./assets/images/backgrounds/sitting-w-ball-vert-bg-534x800.jpg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -555,58 +556,75 @@ h1 {
   }
 }
 
-@media only screen and (orientation: landscape) and (max-width: 575px) {
+@media only screen and (orientation: landscape) and (max-width: 450px) {
   .about-bg-img {
     background-image: radial-gradient(
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 1) 90%
       ),
-      url("./assets/images/backgrounds/sitting-w-ball-bg-25.jpg");
+      url("./assets/images/backgrounds/sitting-w-ball-bg-450x300.jpg");
+    background-position-y: 40%;
   }
 }
 
-@media only screen and (orientation: landscape) and (min-width: 576px) {
+@media only screen and (orientation: landscape) and (min-width: 451px) {
   .about-bg-img {
     background-image: radial-gradient(
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 1) 90%
       ),
-      url("./assets/images/backgrounds/sitting-w-ball-bg-50.jpg");
+      url("./assets/images/backgrounds/sitting-w-ball-bg-750x500.jpg");
+    background-position-y: 40%;
   }
 }
 
-@media only screen and (orientation: landscape) and (min-width: 992px) {
+@media only screen and (orientation: landscape) and (min-width: 751px) {
   .about-bg-img {
     background-image: radial-gradient(
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 1) 90%
       ),
-      url("./assets/images/backgrounds/sitting-w-ball-bg-100.jpg");
+      url("./assets/images/backgrounds/sitting-w-ball-bg-1125x750.jpg");
+    background-position-y: 40%;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-width: 1126px) {
+  .about-bg-img {
+    background-image: radial-gradient(
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 1) 90%
+      ),
+      url("./assets/images/backgrounds/sitting-w-ball-bg-1500x1000.jpg");
+    background-position-y: 40%;
   }
 }
 
 /* smallest portrait image is set by default */
-@media only screen and (orientation: portrait) and (min-width: 576px) {
+@media only screen and (orientation: portrait) and (min-width: 535px) {
   .about-bg-img {
     background-image: radial-gradient(
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 1) 90%
       ),
-      url("./assets/images/backgrounds/sitting-w-ball-bg-vert-50.jpg");
+      url("./assets/images/backgrounds/sitting-w-ball-vert-bg-800x1200.jpg");
+    background-position-y: center;
   }
 }
 
-@media only screen and (orientation: portrait) and (min-width: 992px) {
+@media only screen and (orientation: portrait) and (min-width: 801px) {
   .about-bg-img {
     background-image: radial-gradient(
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 1) 90%
       ),
-      url("./assets/images/backgrounds/sitting-w-ball-bg-vert-100.jpg");
+      url("./assets/images/backgrounds/sitting-w-ball-vert-bg-1067x1600.jpg");
+    background-position-y: center;
   }
 }
