--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html {
   --banner-bg-color: #193a71;
 
-  scroll-snap-type: y mandatory;
+  /* scroll-snap-type: y mandatory; */
 }
 
 body {
@@ -24,44 +24,53 @@ h1 {
   margin-bottom: 3rem;
 }
 
-.scroll-container {
+/* #scroll-overlay {
+  position: absolute;
+  width: 100vw;
   height: 100vh;
+  top: 0px;
+  left: 0px;
+  box-shadow: inset 0px 0px 0px 2px green;
+} */
 
-  /* padding: 15% 0% 15% 0%; */
-  padding: calc(env(safe-area-inset-top, 0vh) + 10vh) env(safe-area-inset-right)
-    calc(env(safe-area-inset-bottom, 0vh) + 10vh) env(safe-area-inset-left);
-
-  overflow: hidden;
+/* #scroll-box {
   position: relative;
+  width: 100vw;
+  height: 80vh;
+  overflow: scroll;
 
-  scroll-snap-align: start;
-  /* scroll-snap-stop: always; */
-}
+  scroll-snap-type: y mandatory;
+} */
 
-.height-test-env {
-  height: 100vh;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
+/* #scroll-top-border {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: calc(env(safe-area-inset-top, 0vh) + 10vh);
+  pointer-events: none;
+  box-shadow: inset 0px 0px 0px 5px red;
+  z-index: 9999;
+} */
 
-  display: relative;
-}
+/* #scroll-top-border rect {
+  fill: #ff000050;
+} */
 
-.page-container {
-  display: block;
-  position: relative;
-  height: 100%;
-  max-height: 100%;
-  max-width: 100%;
-  overflow: hidden;
-  /* box-shadow: inset 0px 0px 2px 2px green; */
-}
+/* #scroll-bottom-border {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100vw;
+  height: calc(env(safe-area-inset-bottom, 0vh) + 10vh);
+  pointer-events: none;
+  box-shadow: inset 0px 0px 0px 5px orange;
+  z-index: 9999;
+} */
 
-.content-container {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  /* box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 0.5); */
-}
+/* #scroll-bottom-border rect {
+  fill: #00ff0050;
+} */
 
 #full-container {
   display: flex;
@@ -165,6 +174,49 @@ h1 {
   left: 32%;
   filter: drop-shadow(0.25em 0.25em 0.25em #000000);
   /* box-shadow: inset 0px 0px 0px 4px silver; */
+}
+
+.scroll-container {
+  height: 100%;
+
+  /* padding: 15% 0% 15% 0%; */
+  /* padding: calc(env(safe-area-inset-top, 0vh) + 10vh) env(safe-area-inset-right)
+    calc(env(safe-area-inset-bottom, 0vh) + 10vh) env(safe-area-inset-left); */
+
+  /* Moved top and bottom padding to ScrollOverlay. Keeping padding for left and right for landscape modes */
+  padding: 0vh env(safe-area-inset-right, 0vh) 0vh
+    env(safe-area-inset-left, 0vh);
+
+  overflow: hidden;
+  position: relative;
+
+  scroll-snap-align: start;
+  /* scroll-snap-stop: always; */
+}
+
+.height-test-env {
+  height: 100vh;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
+
+  display: relative;
+}
+
+.page-container {
+  display: block;
+  position: relative;
+  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  /* box-shadow: inset 0px 0px 2px 2px green; */
+}
+
+.content-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 0.5); */
 }
 
 .qrcode-box img {
@@ -358,7 +410,7 @@ h1 {
       rgba(0, 0, 0, 1) 90%
     ),
     url("./assets/images/backgrounds/sitting-w-ball-vert-bg-534x800.jpg");
-  background-position: center top;
+  background-position: center 40%;
   background-repeat: no-repeat;
   background-size: cover;
   /* box-shadow: inset 0px 20px 10px -10px rgba(0, 0, 0, 0.8); */
@@ -455,6 +507,9 @@ h1 {
 
 /* QRCODE MODAL */
 /* full screen modal translates from top which does not center the qrcode image. This will scale from 0 to 1 instead. Since the element is full screen, the scale will originate from the center of the screen.*/
+.qrcode-modal {
+  z-index: 9999;
+}
 .qrcode-modal.modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
   transform: scale(0);
@@ -613,7 +668,7 @@ h1 {
         rgba(0, 0, 0, 1) 90%
       ),
       url("./assets/images/backgrounds/sitting-w-ball-vert-bg-800x1200.jpg");
-    background-position-y: center;
+    /* background-position-y: center; */
   }
 }
 
@@ -625,6 +680,6 @@ h1 {
         rgba(0, 0, 0, 1) 90%
       ),
       url("./assets/images/backgrounds/sitting-w-ball-vert-bg-1067x1600.jpg");
-    background-position-y: center;
+    /* background-position-y: center; */
   }
 }
