--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ html {
   --banner-bg-color: #193a71;
 
   /* scroll-snap-type: y mandatory; */
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 body {
@@ -13,6 +17,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: #000000;
+
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 code {
@@ -219,8 +227,20 @@ h1 {
   /* box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 0.5); */
 }
 
+.qrcode-box {
+  position: relative;
+  display: inline-flex;
+  max-width: 100%;
+  max-height: 100%;
+  /* padding-bottom: 5vh; */
+  overflow: hidden;
+}
+
 .qrcode-box img {
-  max-width: 75%;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  /* object-fit: contain; */
   border-radius: 1rem;
 }
 
@@ -566,12 +586,12 @@ h1 {
     margin-bottom: 0.5rem;
   }
 
-  .qrcode-box img {
+  /* .qrcode-box img {
     padding: 1rem;
     border: none;
     background-color: transparent;
     border-radius: 2rem;
-  }
+  } */
 
   .install-popover {
     height: auto;
