--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 html {
   --banner-bg-color: #193a71;
 
-  /* scroll-snap-type: y mandatory; */
+  scroll-snap-type: y mandatory;
   height: 100vh;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
@@ -18,8 +18,8 @@ body {
 
   background-color: #000000;
 
-  height: 100%;
-  position: fixed;
+  position: relative;
+  height: 100vh;
 
   padding: 0;
   margin: 0;
@@ -187,7 +187,7 @@ h1 {
 }
 
 .scroll-container {
-  height: 100%;
+  height: 100vh;
 
   /* padding: 15% 0% 15% 0%; */
   /* padding: calc(env(safe-area-inset-top, 0vh) + 10vh) env(safe-area-inset-right)
