--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,8 @@ h1 {
   background-repeat: no-repeat;
   background-size: cover;
   /* box-shadow: inset 0px 20px 10px -10px rgba(0, 0, 0, 0.8); */
-  box-shadow: inset 0px 0px 1rem 1rem rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0px 0px 1rem 1rem rgba(0, 0, 0, 0.8),
+    0px 0px 2px 2px rgba(0, 0, 0, 0.8);
   /* border-radius: 0%; */
 }
 
@@ -653,7 +654,7 @@ h1 {
         rgba(0, 0, 0, 1) 90%
       ),
       url("./assets/images/backgrounds/sitting-w-ball-bg-750x500.jpg");
-    background-position-y: 40%;
+    background-position-y: 30%;
   }
 }
 
@@ -665,7 +666,7 @@ h1 {
         rgba(0, 0, 0, 1) 90%
       ),
       url("./assets/images/backgrounds/sitting-w-ball-bg-1125x750.jpg");
-    background-position-y: 40%;
+    background-position-y: 30%;
   }
 }
 
@@ -677,7 +678,7 @@ h1 {
         rgba(0, 0, 0, 1) 90%
       ),
       url("./assets/images/backgrounds/sitting-w-ball-bg-1500x1000.jpg");
-    background-position-y: 40%;
+    background-position-y: 30%;
   }
 }
 
