--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ h1 {
   fill: #00ff0050;
 } */
 
-#full-container {
+/* #full-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,10 +91,9 @@ h1 {
   flex-direction: column;
   flex-grow: 0;
   position: relative;
-  /* box-shadow: inset 0px 0px 0px 10px hotpink; */
-}
+} */
 
-#image-container {
+/* #image-container {
   position: relative;
   display: inline-flex;
   max-width: 100%;
@@ -102,36 +101,33 @@ h1 {
 
   padding-bottom: 5vh;
   overflow: hidden;
-  /* box-shadow: inset 0px 0px 0px 7px cyan; */
-}
+} */
 
-#throw-no-ball-transparent {
+/* #throw-no-ball-transparent {
   max-width: 100%;
   max-height: 100%;
   top: 0;
   left: 0;
   opacity: 0;
-  /* box-shadow: inset 0px 0px 0px 4px greenyellow; */
-}
+} */
 
-#throw-no-ball {
+/* #throw-no-ball {
   max-width: 100%;
   max-height: 100%;
   top: 0;
   left: 0;
   position: absolute;
-  /* box-shadow: inset 0px 0px 0px 4px greenyellow; */
-}
+} */
 
 #ball {
-  animation: indefinite-spin 30s infinite linear;
-  max-width: 100%;
+  /* max-width: 100%;
   max-height: 100%;
   position: absolute;
   top: 0;
-  left: 0;
-  transform-origin: 26.3% 22.2%;
-  /* box-shadow: inset 0px 0px 0px 2px blueviolet; */
+  left: 0; */
+
+  /* animation: indefinite-spin 30s infinite linear; */
+  /* transform-origin: 26.3% 22.2%; */
 }
 
 #image-container #banner {
@@ -149,8 +145,9 @@ h1 {
   width: 90%;
   height: 100%;
   margin-inline: auto;
-  transform: skew(-20deg);
+  /* transform: skew(-20deg); */
   background-color: var(--banner-bg-color);
+  background: linear-gradient(-45deg, var(--banner-bg-color) 40%, #9f1c92 80%);
   filter: drop-shadow(10px 10px 10px #000000);
 }
 
@@ -172,7 +169,11 @@ h1 {
   position: absolute;
   top: -10%;
   left: -8%;
-  filter: drop-shadow(0.25em 0.25em 0.25em #000000);
+  stroke: #fff;
+  stroke-width: 1;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  /* filter: drop-shadow(0.25em 0.25em 0.25em #000000); */
   /* box-shadow: inset 0px 0px 0px 7px orange; */
 }
 
@@ -182,7 +183,11 @@ h1 {
   position: absolute;
   top: 35%;
   left: 32%;
-  filter: drop-shadow(0.25em 0.25em 0.25em #000000);
+  stroke: #fff;
+  stroke-width: 1;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  /* filter: drop-shadow(0.25em 0.25em 0.25em #000000); */
   /* box-shadow: inset 0px 0px 0px 4px silver; */
 }
 
