--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html {
   --banner-bg-color: #193a71;
 
   scroll-snap-type: y mandatory;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 0;
   margin: 0;
   /* overflow: hidden; */
@@ -19,7 +19,7 @@ body {
   background-color: #000000;
 
   position: relative;
-  height: 100vh;
+  /* height: 100vh; */
 
   padding: 0;
   margin: 0;
