--- a/src/index.css
+++ b/src/index.css
@@ -83,16 +83,11 @@ h1 {
   fill: #00ff0050;
 } */
 
-/* #full-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
-  flex-grow: 0;
-  position: relative;
-} */
+#full-container {
+  padding-bottom: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 
 /* #image-container {
   position: relative;
@@ -433,8 +428,8 @@ h1 {
   width: 100%;
   z-index: -1;
   background-image: radial-gradient(
-      rgba(0, 0, 0, 0.8),
-      rgba(0, 0, 0, 0.8),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7),
       rgba(0, 0, 0, 1) 90%
     ),
     url("./assets/images/backgrounds/sitting-w-ball-vert-bg-534x800.jpg");
@@ -593,6 +588,10 @@ h1 {
 @media (orientation: landscape) {
   h1 {
     margin-bottom: 0.5rem;
+  }
+
+  #full-container {
+    padding-bottom: 1rem;
   }
 
   /* .qrcode-box img {
